--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title> PRIYANSH SINGH </title>
-    <link rel="stylesheet" type="text/css" href="/Users/priyanshsingh/Desktop/web development code()/2nd web page/my site/cssfile.css">
-    <link rel="icon" href="/Users/priyanshsingh/Desktop/web development code()/2nd web page/my site/favicon.ico?2">
+    <link rel="stylesheet" type="text/css" href="cssfile.css">
+    <link rel="icon" href="favicon.ico?2">
   </head>
   <body>
       <div class="topcontainer">
